# ProjectScylla

./: .bumpversion.cfg  .claude-followup-698.md  .claude-prompt-1563.md  .claude-prompt-603.md  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gooseignore  .markdownlint.json  .markdownlint.yaml  .pip-audit-ignore.txt  .pre-commit-config.yaml  .shellcheckrc  .trivyignore  .yamllint.yaml  ANALYSIS_SUMMARY.md  CENTRALIZED_REPOS_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MYPY_KNOWN_ISSUES.md  README.md  SECURITY.md  filelist.txt  justfile  pixi.toml  plan-eventual-crafting-moler.md  plan-glittery-frolicking-lagoon.md  plan-iridescent-singing-tiger.md  plan-merry-wandering-wirth.md  plan-nested-painting-hoare.md  plan-purrfect-herding-plum.md  plan-spicy-hugging-babbage.md  plan-sunny-floating-valley.md  plan-toasty-weaving-frog.md  (+2 more)
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/agents/: benchmark-specialist.md  chief-evaluator.md  evaluation-orchestrator.md  experiment-design.md  implementation-engineer.md  metrics-specialist.md  reporting-specialist.md  statistical-specialist.md
.claude/commands/: clean-worktrees.md
.claude/shared/: common-constraints.md  error-handling.md  evaluation-guidelines.md  github-issue-workflow.md  grading-scale.md  metrics-definitions.md  mojo-anti-patterns.md  mojo-guidelines.md  pr-workflow.md  thinking-mode.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  refactoring.yml
.github/workflows/: _required.yml  ci-image.yml  digest-check.yml  docker-test.yml  mypy-regression.yml  pre-commit.yml  release.yml  security.yml  shell-test.yml  test.yml
.tmp-container-creds/: .credentials.json
agents/: README.md  delegation-rules.md  hierarchy.md
agents/templates/: level-2-design-agent.md  level-3-specialist.md
ci/: .containerignore  Containerfile  README.md
config/: defaults.yaml
config/judge/: system_prompt.md
config/models/: _test-model-2.yaml  claude-haiku-4-5.yaml  claude-opus-4-1.yaml  claude-opus-4-5.yaml  claude-opus-4-6.yaml  claude-opus-4.yaml  claude-sonnet-4-5-20250929.yaml  claude-sonnet-4-5.yaml  claude-sonnet-4-6.yaml  claude-sonnet-4.yaml  goose.yaml
config/tiers/: t0-prompts.md  t0-vanilla.md  t1-prompted.md  t1-skills.md  t2-tooling.md  t3-delegation.md  t4-delegation.md  t4-hierarchy.md  t5-hierarchy.md  t5-hybrid.md  t6-hybrid.md  t6-super.md  tiers.yaml
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: README.md  README_REFERENCES.md  analysis-prompt.md  analysis_pipeline.md  arxiv-submission.md  clarifying_prompt.md  container-authentication.md  eval_hybrid_approach.md  extended-thinking-investigation.md  issue-153-verification.md  notes.md  paper-readiness-audit.md  paper.aux  paper.bbl  paper.blg  paper.md  paper.out  paper.tex  plan.md  references.bib  research.md  research2.md  research_paper.tex  summary.md  summary2.md  template.md  template.tex  unified_research.md
docs/design/: adapter-interface.md  analysis_pipeline.md  architecture.md  container-architecture.md  container-authentication.md  container-usage.md  grading-scale.md  judge-protocol.md  metrics-formulas.md  regenerate-results.md  rerun-agents-guide.md  rerun-judges-guide.md  rubric-schema.md  test-schema.md
docs/dev/: analysis-pipeline-implementation-summary.md  architecture-review-implementation.md  code-quality-audit-2025-02.md  dockerfile-sha256-update.md  metrics-integration-status.md  milestones.md  regenerate-results.md
docs/figures/: fig03_failure_rate_by_tier_include.tex  fig07_token_distribution_include.tex  fig10_score_violin_include.tex  fig11_tier_uplift_include.tex  fig12_consistency_include.tex  fig20_metric_correlation_heatmap_include.tex  fig23_qq_plots_include.tex  fig24_score_histograms_include.tex
docs/paper-dryrun-arxiv/: 00README.json  main.bbl  main.tex  references.bib
docs/paper-dryrun-data/: checkpoint.json  judge_prompt.md  report.json  result.json
references/: fixture-timeout-calibration-notes.md  notes.md
schemas/: defaults.schema.json  model.schema.json  rubric.schema.json  test.schema.json  tier.schema.json
scripts/: README.md  __init__.py  add_test_docstrings.py  analyze_dryrun3.py  analyze_tier_task_interaction.py  audit_doc_examples.py  build_arxiv_paper.py  build_arxiv_submission.sh  build_paper.sh  bump_version.py  check-symlinks.sh  check_changelog_version.py  check_coverage.py  check_defaults_filename.py  check_doc_config_consistency.py  check_docstring_fragments.py  check_max_complexity.py  check_model_config_consistency.py  check_mypy_counts.py  check_package_version_consistency.py  check_python_version_consistency.py  check_readmes.py  check_test_counts.py  check_tier_config_consistency.py  check_tier_label_consistency.py  check_type_alias_shadowing.py  check_unit_test_structure.py  check_version_consistency.py  cleanup-stale-worktrees.sh  common.py  docker_build_timing.py  docker_common.sh  export_data.py  extract_blocks.py  filter_audit.py  fix_markdown.py  fix_table_underscores.py  generate_all_results.py  generate_changelog.py  generate_figures.py  (+44 more)
scripts/agents/: agent_stats.py  agent_utils.py  check_frontmatter.py  list_agents.py  test_agent_loading.py  validate_agents.py
scripts/hooks/: pre-push
scylla/: __init__.py  orchestrator.py
scylla/adapters/: __init__.py  base.py  base_cli.py  claude_code.py  cline.py  goose.py  openai_codex.py  opencode.py
scylla/agamemnon/: __init__.py  client.py  errors.py  models.py
scylla/analysis/: CONFIG_README.md  __init__.py  config.py  config.yaml  dataframes.py  loader.py  stats.py
scylla/automation/: __init__.py  curses_ui.py  dependency_resolver.py  follow_up.py  git_utils.py  github_api.py  implementer.py  models.py  planner.py  pr_manager.py  prompts.py  rate_limit.py  retry.py  reviewer.py  worktree_manager.py
scylla/cli/: __init__.py  (+2 more)
tests/: test_check_type_alias_shadowing.py  test_nbstripout_hook.py
(+2029 files in other folders)
