[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scylla"
version = "0.1.0"
description = "AI agent testing and optimization framework"
readme = "README.md"
license = {text = "BSD 3-Clause"}
requires-python = ">=3.10"
authors = [
    { name = "Micah Villmow <research@villmow.us>" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agents", "benchmarking", "evaluation", "testing"]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
scylla = "scylla.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
    "ruff>=0.1.0",
    "defusedxml>=0.7",
]
analysis = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "seaborn>=0.13",
    "scipy>=1.11",
    "altair>=5.0",
    "vl-convert-python>=1.0",
    "krippendorff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/mvillmow/ProjectScylla"
Repository = "https://github.com/mvillmow/ProjectScylla"
Issues = "https://github.com/mvillmow/ProjectScylla/issues"

[tool.hatch.build.targets.wheel]
packages = ["scylla"]

[tool.hatch.build.targets.wheel.force-include]
"scylla/analysis/schemas" = "scylla/analysis/schemas"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "S101"]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line before class (conflicts with D211)
    "D213",  # Multi-line summary second line (conflicts with D212)
    "D417",  # Missing argument descriptions in docstring
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert statements are intentional in test code

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=scylla",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=74",
]

[tool.mypy]
python_version = "3.10"
# Incremental mypy adoption — Phases 1-6 of #687 complete (scylla/ + scripts/ clean).
# Remaining strict settings: Phase 7a-c (#1083-#1085), Phase 9 (#1086).
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true
# Strict settings — enabled as errors are fixed per #687 roadmap
check_untyped_defs = false        # TODO #1083: 26 errors in scripts/export_data.py
disallow_untyped_defs = false     # TODO #1084: 32 missing annotations
disallow_incomplete_defs = false  # TODO #1086: 16 errors
disallow_any_generics = false     # TODO #1086: 78 errors
warn_return_any = false           # TODO #1085: 58 errors
warn_redundant_casts = true
warn_unused_ignores = true
# Allow flexible typing while codebase type coverage improves
allow_redefinition = true
implicit_reexport = true


[tool.coverage.run]
branch = true
source = ["scylla"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 74
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
